--- a/index.html
+++ b/index.html
@@ -1,5 +1,48 @@
-DevChallenge
-Home Features Contact
-Create amazing graphics
-Colaborate and create beautiful graphics with your team
-Start now
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">    
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <section class="container-header">
+            <div class="logo">
+                DevChallenge
+            </div>
+            <div class="menu-hamburguer">
+                <div class="btn-left"></div>
+            </div>
+            <nav>
+                <ul class="menu-nav">
+                    <li class="item">Home</li>
+                    <li class="item">Features</li>
+                    <li class="item">Contact</li>
+                </ul>
+            </nav>
+        </section>
+    </header>
+    <main>
+        <section class="container-main">
+            <div class="box-main">
+                <div class="box-left">
+                    <div class="box-text">
+                        <p class="title">Create amazing graphics</p>
+                        <p class="paragraph">Colaborate and create beautiful graphics with your team</p>
+                    </div>
+                    <button class="btn-action">Start Now</button>
+                </div>
+            </div>
+            <div>
+                <img class="image" src="./assets/team.jpg" alt="">
+            </div>
+        </section>
+    </main>
+</body>
+</html>
